# darling-testsuite

./: .gitignore  CMakeLists.txt  LICENSE  README.md
framework/: CMakeLists.txt
framework/AVFoundation/: CMakeLists.txt
framework/AddressBook/: CMakeLists.txt
framework/AddressBook/test/: test_AddressBook_variable.m
framework/AppKit/: CMakeLists.txt  TODO.md
framework/AppKit/test/: test_AppKit_variable.m
framework/AppKit/test/NSApplication/: CMakeLists.txt  test_AppKit_NSApplication_setPresentationOptions_verifyException.m
framework/AppKit/test/NSColor/: CMakeLists.txt  test_AppKit_NSColor_colorUsingColorSpaceNamedevice.m  test_AppKit_NSColor_colorWithCatalogNamecolorName.m
framework/AppKit/test/NSColorList/: CMakeLists.txt  test_AppKit_NSColorList_colorListNamed_verifySystemColorList.m  test_AppKit_NSColorList_editable_isDefaultColorListEditable.m
framework/Carbon/: CMakeLists.txt
framework/Carbon/test/: test_Carbon_variable.m
framework/CoreBluetooth/: CMakeLists.txt
framework/CoreBluetooth/test/: test_CoreBluetooth_variable.m
framework/CoreGraphics/: CMakeLists.txt
framework/CoreGraphics/test/: test_CoreGraphics_variable.m
framework/CoreImage/: CMakeLists.txt
framework/CoreImage/test/: test_CoreImage_variable.m
framework/CoreMIDI/: CMakeLists.txt
framework/CoreMIDI/test/: test_CoreMIDI_variable.m
framework/CoreMedia/: CMakeLists.txt
framework/CoreServices/: CMakeLists.txt
framework/CoreServices/frameworks/LaunchServices/: CMakeLists.txt
framework/CoreServices/frameworks/LaunchServices/test/: test_LaunchServices_variable.m
framework/CoreServices/frameworks/SearchKit/: CMakeLists.txt  TODO.md
framework/CoreText/: CMakeLists.txt
framework/CoreText/test/: test_CoreText_variable.m
framework/CoreVideo/: CMakeLists.txt
framework/CoreVideo/test/: test_CoreVideo_variable.m
framework/CoreWLAN/: TODO.md
framework/Foundation/: CMakeLists.txt
framework/Foundation/test/: test_Foundation_variable.m
framework/Foundation/test/NSDictionary(NSDictionary)/: CMakeLists.txt
framework/Foundation/test/NSString(NSURLUtilities)/: CMakeLists.txt
framework/ImageIO/: CMakeLists.txt
framework/ImageIO/resource/icns/: Type_ic05.icns  Type_ic08.icns  Type_ic11.icns  Type_ic13.icns  Type_ic14.icns
framework/ImageIO/script/: inspect_icns.sh
framework/PDFKit/: CMakeLists.txt
framework/PDFKit/test/: test_PDFKit_variable.m
framework/QuartzCore/: CMakeLists.txt
framework/Security/: CMakeLists.txt
framework/Security/test/SecTrustEvaluateWithError/: test_SecTrustEvaluateWithError.c
framework/Security/test/resources/: pypi_org.der
framework/Security/tools/: grab_pypi_certificates.py
framework/SystemConfiguration/: CMakeLists.txt
framework/SystemConfiguration/test/: test_SystemConfiguration_variable.m
framework/VideoToolbox/: CMakeLists.txt
framework/WebKit/: CMakeLists.txt
framework/WebKit/test/: test_WebKit_variable.m
kernel/: CMakeLists.txt
kernel/xnu_syscall/: CMakeLists.txt  README.md
kernel/xnu_syscall/docs/: nostdlib.md  xnu_syscall_calling_convention.md  xnu_syscall_implementation_details.md  xnu_syscall_that_cant_be_tested.md
kernel/xnu_syscall/docs/assembly/: arm64_cheatsheet.md  i386_cheatsheet.md  x86_64_cheatsheet.md
kernel/xnu_syscall/include/nostdlib/: assert.h  string.h
kernel/xnu_syscall/include/syscall/: args.h  cbridge_syscall.h  macros.h  syscall.h  sysnum.h
kernel/xnu_syscall/include/syscall/impl/: bsd_cbridge_syscall.h
kernel/xnu_syscall/src/nostdlib/: assert.c  io.c  math.c  string.c
kernel/xnu_syscall/src/syscall/: args.c  syscall.S
kernel/xnu_syscall/test/: CMakeLists.txt
kernel/xnu_syscall/test/bsd/sys_close/: test_close_invalid_fd.c  test_close_success.c
kernel/xnu_syscall/test/bsd/sys_exit/: test_return_0.c  test_return_1.c
kernel/xnu_syscall/test/bsd/sys_link/: test_link_success.c
kernel/xnu_syscall/test/bsd/sys_open/: test_open_doesnt_exist.c  test_open_exist.c
kernel/xnu_syscall/test/bsd/sys_read/: test_read_file.c
lib/darling-directsyscall/: CMakeLists.txt
lib/darling-directsyscall/include/darling-directsyscall/: args.h  cbridge_syscall.h  macros.h  syscall.h  sysnum.h  types.h
lib/darling-directsyscall/src/: args.c  syscall.S
lib/darling-directsyscall/src/bsd/: sys_close.c  sys_exit.c  sys_fcntl.c  sys_link.c  sys_lseek.c  sys_lstat.c  sys_lstat64.c  sys_open.c  sys_posix_spawn.c  sys_read.c  sys_unlink.c  sys_wait4.c  sys_write.c
lib/darling-testsuite/: CMakeLists.txt
lib/darling-testsuite/include/DarlingTestSuite/: DLTSLogging.h
lib/darling-testsuite/include/darling-testsuite/: assertion.h  availability.h  backtrace.h  log.h  print.h  symbol.h  testcase.h  unsupported.h  xml.h
lib/darling-testsuite/src/darling-testsuite/: assertion.m  backtrace.m  log.m  print.m  symbol.m  testcase.m  unsupported.c  xml.m
non-apple/darling-testsuite-lib/: CMakeLists.txt
non-apple/darling-testsuite-lib/include/DarlingTestSuite/: DLTSLogging.h
non-apple/darling-testsuite-lib/include/darling-testsuite/: assertion.h  availability.h  print.h  unsupported.h  xml.h
non-apple/darling-testsuite-lib/src/: unsupported.c
non-apple/darling-testsuite-lib/src/DarlingTestSuite/: DLTSLogging.m
non-apple/darling-testsuite-lib/src/darling-testsuite/: assertion.m  xml.m
testsuite-kernel/bsd/test/: CMakeLists.txt
testsuite-kernel/bsd/test/sys_close/: test_sys_close_invalid_fd.c  test_sys_close_success.c
testsuite-kernel/bsd/test/sys_exit/: test_sys_exit_returns_0.c  test_sys_exit_returns_1.c
testsuite-kernel/bsd/test/sys_link/: test_sys_link_success.c
testsuite-kernel/bsd/test/sys_open/: test_sys_open_doesnt_exist.c  test_sys_open_exist.c
testsuite-kernel/bsd/test/sys_read/: test_sys_read_file.c
testsuite-kernel/bsd/test/sys_unlink/: test_sys_unlink_delete_newly_created_file.c  test_sys_unlink_file_does_not_exist.c
testsuite-kernel/bsd/test/sys_wait4/: test_sys_wait4.c  test_sys_wait4_child.c  test_wait4.h
testsuite-kernel/bsd/test/sys_write/: test_sys_write_file.c
testsuite/usr/lib/libobjc.A.dylib/: CMakeLists.txt
testsuite/usr/lib/system/: CMakeLists.txt
(+128 files in other folders)
