add_subdirectory(AddressBook)
add_subdirectory(AppKit)
add_subdirectory(AVFoundation)
add_subdirectory(Carbon)
add_subdirectory(CoreBluetooth)
add_subdirectory(CoreImage)
add_subdirectory(CoreServices)
add_subdirectory(Foundation)
add_subdirectory(ImageIO)
add_subdirectory(PDFKit)
add_subdirectory(Security)
add_subdirectory(WebKit)
