add_subdirectory(AddressBook)
add_subdirectory(AppKit)
add_subdirectory(AVFoundation)
add_subdirectory(Carbon)
add_subdirectory(CoreBluetooth)
add_subdirectory(CoreGraphics)
add_subdirectory(CoreImage)
add_subdirectory(CoreMedia)
add_subdirectory(CoreMIDI)
add_subdirectory(CoreServices)
add_subdirectory(CoreText)
add_subdirectory(CoreVideo)
add_subdirectory(Foundation)
add_subdirectory(ImageIO)
add_subdirectory(PDFKit)
add_subdirectory(QuartzCore)
add_subdirectory(Security)
add_subdirectory(SystemConfiguration)
add_subdirectory(VideoToolbox)
add_subdirectory(WebKit)
