add_executable(test_AppKit_NSApplication_helpMenu_setterDoesntAffectMainMenuStructure "test_AppKit_NSApplication_helpMenu_setterDoesntAffectMainMenuStructure.m")
target_link_libraries(test_AppKit_NSApplication_helpMenu_setterDoesntAffectMainMenuStructure "-framework Foundation" "-framework AppKit" darling-testsuite-lib)
add_test(NAME test_AppKit_NSApplication_helpMenu_setterDoesntAffectMainMenuStructure COMMAND test_AppKit_NSApplication_helpMenu_setterDoesntAffectMainMenuStructure)

add_executable(test_AppKit_NSApplication_setPresentationOptions_verifyException "test_AppKit_NSApplication_setPresentationOptions_verifyException.m")
target_link_libraries(test_AppKit_NSApplication_setPresentationOptions_verifyException "-framework Foundation" "-framework AppKit" darling-testsuite-lib)
add_test(NAME test_AppKit_NSApplication_setPresentationOptions_verifyException COMMAND test_AppKit_NSApplication_setPresentationOptions_verifyException)
