add_executable(test_AppKit_NSColor_class_variable "test_AppKit_NSColor_class_variable.m")
target_link_libraries(test_AppKit_NSColor_class_variable "-framework Foundation" "-framework AppKit" darling-testsuite-lib)
add_test(NAME test_AppKit_NSColor_class_variable COMMAND test_AppKit_NSColor_class_variable)

add_executable(test_AppKit_NSColor_colorUsingColorSpaceNamedevice "test_AppKit_NSColor_colorUsingColorSpaceNamedevice.m")
target_link_libraries(test_AppKit_NSColor_colorUsingColorSpaceNamedevice "-framework Foundation" "-framework AppKit" darling-testsuite-lib)
add_test(NAME test_AppKit_NSColor_colorUsingColorSpaceNamedevice COMMAND test_AppKit_NSColor_colorUsingColorSpaceNamedevice)

add_executable(test_AppKit_NSColor_colorWithCatalogNamecolorName "test_AppKit_NSColor_colorWithCatalogNamecolorName.m")
target_link_libraries(test_AppKit_NSColor_colorWithCatalogNamecolorName "-framework Foundation" "-framework AppKit" darling-testsuite-lib)
add_test(NAME test_AppKit_NSColor_colorWithCatalogNamecolorName COMMAND test_AppKit_NSColor_colorWithCatalogNamecolorName)
