add_executable(test_AppKit_NSColorList_availableColorLists_checkDefaultColorList "test_AppKit_NSColorList_availableColorLists_checkDefaultColorList.m")
target_link_libraries(test_AppKit_NSColorList_availableColorLists_checkDefaultColorList "-framework Foundation" "-framework AppKit" darling-testsuite-lib)
add_test(NAME test_AppKit_NSColorList_availableColorLists_checkDefaultColorList COMMAND test_AppKit_NSColorList_availableColorLists_checkDefaultColorList)

add_executable(test_AppKit_NSColorList_colorListNamed_verifySystemColorList "test_AppKit_NSColorList_colorListNamed_verifySystemColorList.m")
target_link_libraries(test_AppKit_NSColorList_colorListNamed_verifySystemColorList "-framework Foundation" "-framework AppKit" darling-testsuite-lib)
add_test(NAME test_AppKit_NSColorList_colorListNamed_verifySystemColorList COMMAND test_AppKit_NSColorList_colorListNamed_verifySystemColorList)

add_executable(test_AppKit_NSColorList_editable_isDefaultColorListEditable "test_AppKit_NSColorList_editable_isDefaultColorListEditable.m")
target_link_libraries(test_AppKit_NSColorList_editable_isDefaultColorListEditable "-framework Foundation" "-framework AppKit" darling-testsuite-lib)
add_test(NAME test_AppKit_NSColorList_editable_isDefaultColorListEditable COMMAND test_AppKit_NSColorList_editable_isDefaultColorListEditable)

add_executable(test_AppKit_NSColorList_insertColorkeyatIndex_defaultColorListNotEditable "test_AppKit_NSColorList_insertColorkeyatIndex_defaultColorListNotEditable.m")
target_link_libraries(test_AppKit_NSColorList_insertColorkeyatIndex_defaultColorListNotEditable "-framework Foundation" "-framework AppKit" darling-testsuite-lib)
add_test(NAME test_AppKit_NSColorList_insertColorkeyatIndex_defaultColorListNotEditable COMMAND test_AppKit_NSColorList_insertColorkeyatIndex_defaultColorListNotEditable)
