add_executable(test_Foundation_NSString_stringByRemovingPercentEncoding "test_Foundation_NSString_stringByRemovingPercentEncoding.m")
target_link_libraries(test_Foundation_NSString_stringByRemovingPercentEncoding "-framework Foundation" darling-testsuite-lib)
add_test(NAME test_Foundation_NSString_stringByRemovingPercentEncoding COMMAND test_Foundation_NSString_stringByRemovingPercentEncoding)
